--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env:nodemcu-32s]
 platform = espressif32
-board = nodemcu-32s
-framework = arduino
+board = esp32dev
+framework = espidf
 upload_port = COM10
 monitor_port = COM10
 monitor_speed = 115200
